2009-04-20  Glenn Randers-Pehrson <glennrp@simple....>

        * coders/png.c: Cosmetic-only, change "True" to "MagickTrue" or
          "MagickPass" and "False" to "MagickFalse" or MagickFail".

2009-04-20  Glenn Randers-Pehrson <glennrp@simple....>

        * coders/png.c: Check error return from CompressColormapTransFirst()

2009-04-20  Glenn Randers-Pehrson <glennrp@simple....>

	* coders/png.c: Refrain from modifying image struct
          members (matte, colors, depth) while writing a PNG.

2009-04-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/options.imdoc: Document the direction of rotation.

2009-04-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/log.c (LogMagickEventList): Use MagickPackageName from
	version.h rather than hard-coding "GraphicsMagick".

2009-04-18  Glenn Randers-Pehrson <glennrp@simple....>

	* coders/jpeg.c: Fixed a warning about "shadowed" variables.

2009-04-17  Glenn Randers-Pehrson <glennrp@simple....>

	* coders/png.c: Fixed some warnings about "shadowed" variables.

2009-04-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Add tests for some reentrant versions of functions
	where we are still using the non-rentrant versions.

	* magick/composite.c (CompositeImage): Fix problem with
	compositing images where the change image overlaps off the left
	side of the canvas.  Should fix SourceForge issue #2766200 "memory
	allocation error when compositing small images".

2009-04-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/semaphore.c: Re-arrange ifdefs so that it is possible to
	use pthreads under the WIN32 API.

2009-04-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/bit_stream.c: Bitstream functions were often not inlining
	and inline functions which don't inline are not much use.
	Bitstream functions are now normal library functions.

2009-03-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
