@@ -21,6 +21,38 @@
 </tr>
 </table>
 <p>
+2009-04-21  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> doc/display.imdoc: Fix documentation for crop and chop keyboard
+        accelerators.  Fixes SourceForge bug #2593388 "error in the
+        documentation/Keyboard accelarators".
+
+</UL>
+<p>
+2009-04-20  Glenn Randers-Pehrson &lt;glennrp@simple....&gt;
+
+<UL>
+  <LI> coders/png.c: Cosmetic-only, change "True" to "MagickTrue" or
+          "MagickPass" and "False" to "MagickFalse" or MagickFail".
+
+</UL>
+<p>
+2009-04-20  Glenn Randers-Pehrson &lt;glennrp@simple....&gt;
+
+<UL>
+  <LI> coders/png.c: Check error return from CompressColormapTransFirst()
+
+</UL>
+<p>
+2009-04-20  Glenn Randers-Pehrson &lt;glennrp@simple....&gt;
+
+<UL>
+  <LI> coders/png.c: Refrain from modifying image struct
+          members (matte, colors, depth) while writing a PNG.
+
+</UL>
+<p>
 2009-04-19  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
